# HbbEnCode

./: README.txt  gradle.properties  settings.gradle
Hard/: build.gradle
Hard/src/androidTest/java/com/hbb/hard/: ExampleInstrumentedTest.java
Hard/src/main/: AndroidManifest.xml
Hard/src/main/java/com/hbb/hard/: HardEncode.java
Hard/src/test/java/com/hbb/hard/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/hbb/encode/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hbb/encode/: BaseActivity.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hbb/encode/: ExampleUnitTest.java
common/: build.gradle
common/src/androidTest/java/com/hbb/common/: ExampleInstrumentedTest.java
common/src/main/: AndroidManifest.xml
common/src/main/java/com/hbb/common/: BaseVideoEncode.java  IEncodeDataListener.java  IVideoEncode.java  NativeCallback.java
common/src/test/java/com/hbb/common/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
software/: build.gradle
software/src/androidTest/java/com/cxy/hbb_x264/: ExampleInstrumentedTest.java
software/src/main/: AndroidManifest.xml
software/src/main/cpp/: CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  maniulog.h  native-lib.cpp
software/src/main/java/com/cxy/hbb_x264/: X264Helper.java
software/src/test/java/com/cxy/hbb_x264/: ExampleUnitTest.java
(+5 files in other folders)
